--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <html>
 
 	<head> 
-		<style> {
-			padding: 50px;
-		}
-		</style>
 	</head>
 	
-		<body style = "background-color: #fff8e7"> 
+		<body style = "padding: 50px; background-color: #fff8e7"> 
 		
 			<h1> Welcome to my website! </h1>
 			
