--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <html>
 
-	<head> 
+	<head>
 	</head>
 	
 		<body style = "padding: 50px; background-color: #fff8e7"> 
+			
+			<h1 style = "font-family: Aachen; font-size: 48px"> TypeFace </h1>
+			<h2 style = "font-family: Continuo; font-size: 24px"> Coming Soon </h2>
+			<p style = "font-family: Cascadia Mono; font-size: 16px"> TypeFace is an innovative way to teach children how to code. 
+				Starting off with draggable coloured blocks akin to the Scratch programming language, students can later
+				progress into typing their own simple commands and eventually high-level languages such as Python. TypeFace
+				is not for profit and all features are free, however a £4.99/month premium subscription service is available.
+				This will remove adverts and include a virtual AI assistant that can guide children on their coding journey
+				by using large-language models such as ChatGPT.
+				
+				TypeFace will be available in the UK and France in Autumn 2024. </p>
 		
-			<h1> Welcome to my website! </h1>
-			
-			<p> Welcome to my website. I'm typing this using HTML. It's not actually a coding language,
-			but it's used for programming website. I'm not sure what HTML stands for, but it's
-			probably something like 'Hairy Tall Mating Lemons'. Cool, eh? </p>
-			
-			<p> And yes, Dugg, I did program this tout seul. How 'bout that? </p>
-			
-			<p> And I'll end with a lovely picture and a link to my favourite website: 
-				<a href="http://www.duolingo.com">surprise website!</a>
-			</p>
-			<img src="file:///D:\Users\Toby\Pictures\51-518898_coca-cola-glass-coke-in-glass-png.png.jpg"/>
-
 		</body>
 </html>
