Fix dumb things

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <html>
-
 	<head>
+		<style>
+			p {
+				font-family: Cascadia Mono;
+				font-size: 16px";
+			}
+		</style>
 	</head>
-	
 		<body style = "padding: 50px; background-color: #fff8e7"> 
 			
 			<h1 style = "font-family: Aachen; font-size: 48px"> TypeFace </h1>
 			<h2 style = "font-family: RO Spritendo; font-size: 24px"> Coming Soon </h2>
-			<p style = "font-family: Cascadia Mono; font-size: 16px"> TypeFace is an innovative way to teach children how to code. 
+			<p > TypeFace is an innovative way to teach children how to code. 
 				Starting off with draggable coloured blocks akin to the Scratch programming language, students can later
 				progress into typing their own simple commands and eventually high-level languages such as Python. TypeFace
 				is not for profit and all features are free, however a £4.99/month premium subscription service is available.
 				This will remove adverts and include a virtual AI assistant that can guide children on their coding journey
 				by using large-language models such as ChatGPT.
-				
-				TypeFace will be available in the UK and France in Autumn 2024. </p>
+			</p>
+
+			<p>
+				TypeFace will be available in the UK and France in Autumn 2024. 
+			</p>
 		
 		</body>
 </html>
