--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<body style = "padding: 50px; background-color: #fff8e7"> 
 			
 			<h1 style = "font-family: Aachen; font-size: 48px"> TypeFace </h1>
-			<h2 style = "font-family: RO Spritendo; font-size: 24px"> Coming Soon </h2>
+			<h2 style = "font-family: Termina; font-size: 24px"> Coming Soon </h2>
 			<p > TypeFace is an innovative way to teach children how to code. 
 				Starting off with draggable coloured blocks akin to the Scratch programming language, students can later
 				progress into typing their own simple commands and eventually high-level languages such as Python. TypeFace
